Fixed alignment

--- a/style.css
+++ b/style.css
@@ -28,6 +28,8 @@ a {
 
 .people-grid {
     display: flex;
+    align-items: center;
+    justify-content: center;
     flex-wrap: wrap;
 }
 
